Fixed Node overlap on resize. Added keyboard shortcut to show Safe Mode toggle

--- a/scripts/calc_plus.css
+++ b/scripts/calc_plus.css
@@ -152,10 +152,9 @@
 }
 
 .calc-plus-tree {
-    position: relative;
+    position: absolute;
     display: inline-block;
     white-space: nowrap;
-    margin-bottom: 10px;
 }
 
 .calc-plus-node {
